# dts2rs

./: .gitignore  LICENSE  README.md  package.json  tsconfig.json
src/: codegen.ts  collect.ts  data.ts  emit_wasm_bindgen.ts  index.ts  stdweb_emit.ts  util.ts
test/pixi.js/: index.d.ts  tsconfig.json
test/pixitest/: Cargo.toml
test/pixitest/src/: main.rs
test/pixitest/static/: index.html
test/pixitest2/: Cargo.toml
test/pixitest2/pkg/: package.json
test/pixitest2/src/: lib.rs
