[package]
name = "pixitest"
version = "1.0.0"
authors = ["Michiel De Muynck <michieldemuynck@gmail.com>"]

[lib]
crate-type = ["cdylib"]

[dependencies.pixi-js]
path = "../pixi.js/output2"

[dependencies.js-sys]
version = "*"
git = "https://github.com/rustwasm/wasm-bindgen.git"

[dependencies.web-sys]
version = "*"
git = "https://github.com/rustwasm/wasm-bindgen.git"
features = [
  'CanvasRenderingContext2d',
  'CssStyleDeclaration',
  'Document',
  'Element',
  'EventTarget',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Node',
  'Window',
]

[dependencies.wasm-bindgen]
version = "*"
git = "https://github.com/rustwasm/wasm-bindgen.git"
